Fix contrast issues on form labels on contact page.

--- a/css/index.css
+++ b/css/index.css
@@ -1223,8 +1223,7 @@ button[type=submit]:active {
 
 input:focus,
 textarea:focus {
-  outline: 0;
-  border: 1px solid var(--grey)
+  border: 1px solid var(--ecto)
 }
 
 ::-webkit-input-placeholder {
